--- a/helm/public-things-api/templates/deployment.yaml
+++ b/helm/public-things-api/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
                 name: global-config
                 key: neo4j.read.write.url
           - name: CACHE_DURATION
-            value: 24h
+            value: 5m
           - name: CONCEPTS_API
             value: "http://public-concepts-api:8080"
         ports:
