Use APIG host name defined in global-config

--- a/helm/public-things-api/templates/deployment.yaml
+++ b/helm/public-things-api/templates/deployment.yaml
@@ -45,7 +45,10 @@ spec:
           - name: CONCEPTS_API
             value: "http://public-concepts-api:8080"
           - name: PUBLIC_API_URL
-            value: "http://api.ft.com"
+            valueFrom:
+              configMapKeyRef:
+                name: global-config
+                key: api.host.with.protocol.insecure
         ports:
         - containerPort: 8080
         livenessProbe:
